[gd_scene load_steps=17 format=3 uid="uid://cy08q220wbk3t"]

[ext_resource type="Script" uid="uid://d4bq5whp1gie0" path="res://Scenes/TelaPista.gd" id="1_r405l"]
[ext_resource type="Texture2D" uid="uid://bphptaj84mmwc" path="res://Assets/Cars/rodaGol2.png" id="2_mgm5u"]
[ext_resource type="Texture2D" uid="uid://cge5wxotno2j7" path="res://Assets/Cars/golSemRoda.png" id="3_naejh"]
[ext_resource type="Texture2D" uid="uid://prgrrnn1pd36" path="res://Objects/Velocimentro.png" id="4_xn67u"]
[ext_resource type="Texture2D" uid="uid://bwd1bwtc65uh8" path="res://Objects/Ponteiro.png" id="5_2qpb6"]
[ext_resource type="Texture2D" uid="uid://dyfih7d04jgxp" path="res://Objects/Acelerador_normal.png" id="6_jtde6"]
[ext_resource type="Texture2D" uid="uid://dobvxxoal4kr1" path="res://Objects/Acelerador_pressionado.png" id="7_fhdyj"]
[ext_resource type="Texture2D" uid="uid://couggou5syab4" path="res://Objects/Freio_normal.png" id="8_8lejn"]
[ext_resource type="Texture2D" uid="uid://dxxbqs5v2t820" path="res://Objects/Freio_pressionado.png" id="9_lkbnr"]
[ext_resource type="Texture2D" uid="uid://bdv65d7pflgr3" path="res://Assets/Screen/texture_tempo.png" id="10_8lejn"]
[ext_resource type="Texture2D" uid="uid://sgd8eo72njac" path="res://Objects/seta 2.png" id="10_arv5t"]
[ext_resource type="Texture2D" uid="uid://csnrykci8fcjq" path="res://Assets/Screen/Popup_parabens.png" id="10_fhdyj"]
[ext_resource type="Texture2D" uid="uid://bm1v68st43w7i" path="res://Assets/Screen/buttons/ResgatarButton.png" id="11_8lejn"]
[ext_resource type="Texture2D" uid="uid://id1j0k2qwx8k" path="res://Objects/seta 1.png" id="11_eeqbj"]
[ext_resource type="Texture2D" uid="uid://ciasqickb6xod" path="res://Assets/Screen/popup_perdeu.png" id="12_lkbnr"]
[ext_resource type="Texture2D" uid="uid://cjw6vuvfixxp" path="res://Assets/Screen/buttons/InicioButton.png" id="13_arv5t"]

[node name="TelaPista" type="Node2D"]
position = Vector2(13, -39)
script = ExtResource("1_r405l")

[node name="Cenario" type="ParallaxBackground" parent="."]

[node name="CamadaPista" type="ParallaxLayer" parent="Cenario"]
position = Vector2(-37, 178)

[node name="SpritePista" type="Sprite2D" parent="Cenario/CamadaPista"]

[node name="FundoRj" type="Sprite2D" parent="Cenario/CamadaPista"]
position = Vector2(-159, 0)
scale = Vector2(1.00485, 0.617083)
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PainelVelocimetro" type="TextureRect" parent="CanvasLayer"]
offset_left = -1.0
offset_top = 481.0
offset_right = 1154.0
offset_bottom = 650.0
texture = ExtResource("4_xn67u")
expand_mode = 1

[node name="Ponteiro1" type="TextureRect" parent="CanvasLayer/PainelVelocimetro"]
layout_mode = 0
offset_left = 655.0
offset_top = 34.0
offset_right = 666.0
offset_bottom = 69.0
rotation = 3.14159
pivot_offset = Vector2(5.5, 35)
texture = ExtResource("5_2qpb6")
expand_mode = 1

[node name="Ponteiro2" type="TextureRect" parent="CanvasLayer/PainelVelocimetro"]
layout_mode = 0
offset_left = 492.0
offset_top = 33.0
offset_right = 503.0
offset_bottom = 68.0
rotation = 3.14159
pivot_offset = Vector2(5.5, 35)
texture = ExtResource("5_2qpb6")
expand_mode = 1

[node name="AceleradorButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 990.0
offset_top = 438.0
offset_right = 1745.0
offset_bottom = 1518.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("6_jtde6")
texture_pressed = ExtResource("7_fhdyj")

[node name="FrearButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 825.0
offset_top = 507.0
offset_right = 1568.0
offset_bottom = 1210.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_8lejn")
texture_pressed = ExtResource("9_lkbnr")

[node name="SetaCimaButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 57.0
offset_top = 479.0
offset_right = 281.0
offset_bottom = 761.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("10_arv5t")

[node name="SetaBaixoButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 209.0
offset_top = 483.0
offset_right = 433.0
offset_bottom = 765.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("11_eeqbj")

[node name="LabelContagem" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 90

[node name="PainelTempo" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 13.0
offset_right = -20.0
offset_bottom = 54.0
grow_horizontal = 0
texture = ExtResource("10_8lejn")
expand_mode = 1

[node name="LabelTempo" type="Label" parent="CanvasLayer/PainelTempo"]
layout_mode = 0
offset_left = 50.0
offset_top = 3.0
offset_right = 90.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 25
text = "90"
horizontal_alignment = 1

[node name="PopupsContainer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FundoEscuro" type="ColorRect" parent="CanvasLayer/PopupsContainer"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 653.0
color = Color(0, 0, 0, 0.701961)

[node name="PopupVitoria" type="TextureRect" parent="CanvasLayer/PopupsContainer"]
layout_mode = 0
offset_left = 355.0
offset_top = 191.0
offset_right = 790.0
offset_bottom = 422.0
texture = ExtResource("10_fhdyj")
expand_mode = 1

[node name="BotaoResgatar" type="TextureButton" parent="CanvasLayer/PopupsContainer/PopupVitoria"]
layout_mode = 0
offset_left = 121.0
offset_top = 137.0
offset_right = 1657.0
offset_bottom = 435.0
scale = Vector2(0.12, 0.12)
texture_normal = ExtResource("11_8lejn")

[node name="PopupDerrota" type="TextureRect" parent="CanvasLayer/PopupsContainer"]
layout_mode = 0
offset_left = 356.0
offset_top = 191.0
offset_right = 789.0
offset_bottom = 421.0
texture = ExtResource("12_lkbnr")
expand_mode = 1

[node name="BotaoInicio" type="TextureButton" parent="CanvasLayer/PopupsContainer/PopupDerrota"]
layout_mode = 0
offset_left = 108.0
offset_top = 123.0
offset_right = 1777.0
offset_bottom = 421.0
scale = Vector2(0.12, 0.12)
texture_normal = ExtResource("13_arv5t")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(562, 366)

[node name="JogadorCarro" type="Node2D" parent="."]
z_index = 10
position = Vector2(-7, 48)

[node name="RodaFrente" type="Sprite2D" parent="JogadorCarro"]
position = Vector2(190.5, 216)
scale = Vector2(0.0637636, 0.0639579)
texture = ExtResource("2_mgm5u")

[node name="RodaTras" type="Sprite2D" parent="JogadorCarro"]
position = Vector2(354, 213)
scale = Vector2(0.0651244, 0.0651244)
texture = ExtResource("2_mgm5u")

[node name="Chassis" type="Sprite2D" parent="JogadorCarro"]
position = Vector2(271, 192)
scale = Vector2(0.0621891, 0.0621891)
texture = ExtResource("3_naejh")
